# Recipe

./: .env.example  .gitignore  README.md  pyproject.toml
accounts/: urls.py  views.py
config/: settings.py  urls.py
fastapi_app/: db.sqlite3  main.py
fastapi_app/api_v1/: __init__.py
fastapi_app/api_v1/auth/: __init__.py  views.py
fastapi_app/api_v1/recipes/: crud.py  dependencies.py  schemas.py  views.py
fastapi_app/core/: config.py  security.py
fastapi_app/core/models/: __init__.py  base.py  category.py  db_helper.py  recipe.py  user.py
recipes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
static/css/: style.css
templates/: base.html
templates/accounts/: login.html  register.html
templates/recipes/: category.html  detail.html  form.html  index.html
